fixes toolbar buttons alignment

--- a/src/style.styl
+++ b/src/style.styl
@@ -479,8 +479,8 @@ a
     width 48px
     height 200px
     // border-radius 100%
-    margin-top 0 !important
-    margin-left 16px !important
+    // margin-top 0 !important
+    // margin-left 16px !important
 
 .btn-rounded
     border-radius 100%
@@ -582,12 +582,6 @@ a
     background: #555;
     }
 
-
-.slider
-    +mobile()
-        left 15px
-        top -260px
-        padding 0 !important
     
 // .volume-wrapper
 //     +mobile()
@@ -619,22 +613,6 @@ a
         margin-right 24px
     svg
         fill var(--note-color)
-
-
-.sliderButton
-    +desktop()
-        float right
-        right 0
-    width 48px
-    height 200px
-    // border-radius 100%
-    margin-top 0 !important
-    margin-left 16px !important
-
-.btn-rounded
-    border-radius 100%
-    display: block;
-    padding: 0;
 
 
 .extra-info
